<resources>
    <string name="app_name">Lignum</string>
    <string name="none"></string>
    <string name="edit_tekst_login">Login</string>
    <string name="edit_tekst_password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="new_login"></string>
    <string name="new_password"></string>
    <string name="new_password_second"></string>
    <string name="new_email"></string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_rejestracja">Rejestracja</string>
    <string name="title_activity_mapa">Map</string>
</resources>
