<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="402dp"
            android:layout_height="328dp" tools:srcCompat="@drawable/drzewo_wisni"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:srcCompat="@drawable/drzewo_wisni"
            app:layout_constraintHorizontal_bias="0.571"/>
    <EditText
            android:layout_width="227dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|text"
            android:ems="10"
            android:id="@+id/account_login"
            android:hint="@string/edit_tekst_login" android:text="@string/none" android:autoText="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginTop="304dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/edit_tekst_password"
            android:id="@+id/account_password" android:text="@string/none"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/account_login" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:layout_width="228dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/account_password" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorAccent" android:text="gowno"
            android:id="@+id/error_login" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.05" tools:text="dsdagfg"/>
    <Button
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:id="@+id/log_in" android:text="@string/log_in"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/error_login"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.074"
            android:layout_marginStart="72dp" app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:text="@string/register"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:id="@+id/register"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/error_login"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.075" android:layout_marginEnd="72dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>