<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Rejestracja">

    <ImageView
            android:layout_width="335dp"
            android:layout_height="147dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:id="@+id/info_email"
            android:padding="5dp" android:visibility="invisible"
            android:textAlignment="center" android:gravity="center"
            android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/info_second_password"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_email" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/new_email"
            android:hint="Email"
            android:text="@string/new_email"
            android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/new_password_second"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/new_password_second"
            android:hint="Second password" android:text="@string/new_password_second"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/new_password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:id="@+id/info_second_password"
            android:padding="5dp" android:visibility="invisible" android:textAlignment="center"
            android:gravity="center" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/info_password" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/new_password_second"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:id="@+id/info_password"
            android:padding="5dp"
            android:visibility="invisible"
            android:textAlignment="center" android:gravity="center"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/info_login" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/new_password"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/new_login"
            android:text="@string/new_login"
            android:hint="Login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/new_password"
            android:hint="Password"
            android:text="@string/new_password"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/new_login" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_register"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/new_email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="130dp"
            android:layout_height="47dp"
            android:id="@+id/info_login"
            android:padding="5dp"
            android:visibility="invisible"
            android:textAlignment="center" android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/new_login"
            android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>